Move towards the Calculus of Constructions in our specs

--- a/latex/preamble.tex
+++ b/latex/preamble.tex
@@ -98,6 +98,7 @@
 \DeclareMathOperator{\wf}{wf}
 \DeclareMathOperator{\fst}{fst}
 \DeclareMathOperator{\snd}{snd}
+\DeclareMathOperator{\Kind}{Kind}
 
 % \DeclareMathOperator{\lett}{let}
 % \DeclareMathOperator{\inn}{in}
