Add some specs for Sigma and Sum (ie coproduct)

--- a/latex/preamble.tex
+++ b/latex/preamble.tex
@@ -89,6 +89,7 @@
 \DeclareMathOperator{\Type}{Type}
 \DeclareMathOperator{\FV}{FV}
 \DeclareMathOperator{\Pii}{Pi}
+\DeclareMathOperator{\Sigmaa}{Sigma}
 \DeclareMathOperator{\foralll}{forall}
 \DeclareMathOperator{\fun}{fun}
 \DeclareMathOperator{\deff}{def}
@@ -99,6 +100,9 @@
 \DeclareMathOperator{\fst}{fst}
 \DeclareMathOperator{\snd}{snd}
 \DeclareMathOperator{\Kind}{Kind}
+\DeclareMathOperator{\inl}{inl}
+\DeclareMathOperator{\inr}{inr}
+\DeclareMathOperator{\match}{match}
 
 % \DeclareMathOperator{\lett}{let}
 % \DeclareMathOperator{\inn}{in}
