Clean up specs a bit

--- a/latex/preamble.tex
+++ b/latex/preamble.tex
@@ -96,7 +96,7 @@
 \DeclareMathOperator{\axiom}{axiom}
 \DeclareMathOperator{\checkk}{check}
 \DeclareMathOperator{\evall}{eval}
-\DeclareMathOperator{\wf}{wf}
+\DeclareMathOperator{\wf}{\mathcal{WF}}
 \DeclareMathOperator{\fst}{fst}
 \DeclareMathOperator{\snd}{snd}
 \DeclareMathOperator{\Kind}{Kind}
